# RokuRemote

./: .buildconfig  .gitignore  com.reaktix.RokuRemote.json  meson.build
data/: com.reaktix.RokuRemote.appdata.xml.in  com.reaktix.RokuRemote.desktop.in  com.reaktix.RokuRemote.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  roku_device.vala  roku_manager.vala  rokuremote.gresource.xml  window.css  window.ui  window.ui~  window.vala
subprojects/: gxml.wrap
